src/test/ui/malformed/malformed-plugin-2.stderr
error: malformed `plugin` attribute input
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"]
   | ^^^^^^^^^^^^^^^^^ help: must be of the form: `#![plugin(name)]`

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"]
   | ^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error; 1 warning emitted

